--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Odin Recipes</h1>
     <a href="recipes/shrimpscampi.html">Shrimp Scampi</a>
-    <a href="recipes/butterchicken.html">Butter Chicken</a>
+    <p><a href="recipes/butterchicken.html">Butter Chicken</a></p>
 
 </body>
 
